# StockTrackerPro

./: .key  .replit  README.md  main.py  practice_mode.py  pyproject.toml  trading.py  utils.py
.streamlit/: config.toml
assets/: style.css
