[project]
name = "repl-nix-stocktrackerpro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpaca-trade-api>=3.0.0",
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
    "openai>=1.55.3",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "streamlit>=1.24.0",
    "trafilatura>=1.12.2",
    "yfinance>=0.2.28",
]
